# diligence-ops

./: .env.example  .gitignore  CLAUDE.md  DiligenceOps_PRD_v0.2.md  DiligenceOps_PRD_v0.docx  README.md  cli.py  option-b-prism-v2.html  pyproject.toml
backend/: __init__.py  api.py  graph.py  models.py
backend/agents/bronze/: def14a.py  eight_k.py  form4.py  resolver.py  ten_k.py  thirteen_f.py  xbrl_facts.py
backend/agents/gold/: cross_workstream.py  memo_writer.py  (+1 more)
backend/data/: csv_writer.py  edgar_client.py  edgar_filings.py
backend/templates/: memo.md.j2  memo_v2.md.j2
design-system/prism/: claude-md-section.md  design-system.md  extracted-globals.css  extracted-tokens.json  motion-system.css  motion-system.md  motion-tokens.json  preview.html  showcase.html
examples/AAPL/: bronze_10k_risk_text.csv  bronze_13f_holdings.csv  bronze_8k_filings.csv  bronze_company_info.csv  bronze_def14a_proxy.csv  bronze_form4_transactions.csv  bronze_xbrl_facts.csv  gold_cross_workstream_flags.csv  gold_risk_assessment.csv  results_diligence_memo.md  silver_financial_kpis.csv  silver_governance.csv  silver_governance_directors.csv  silver_insider_transactions.csv  silver_institutional_holders.csv  silver_material_events.csv  silver_risk_factors.csv
frontend/: package.json
tests/: conftest.py  test_agents.py  test_agents_v2.py  test_api_data_completeness.py  test_correlations.py  test_edgar_client.py  test_edgar_filings.py  test_etl.py  test_pipeline.py  test_section_content.py  test_transformations.py
tests/e2e/: mock_api_server.py  test_results_report.md
(+12 files in other folders)
